fix box-out on mobile

--- a/static/css/style.css
+++ b/static/css/style.css
@@ -157,7 +157,6 @@ aside form > *+* {
 .box-out {
     background-color: var(--light-green);
     border-radius: 0.375rem;
-    margin: var(--vertical-spacing) -2rem 0;
     padding: 2rem;
     padding-left: 3rem;
 }
